<resources>
    <string name="app_name">Trip Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addTrip">Add Trip</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="orLogin">Or sign in with</string>
    <string name="signIn">Sign in</string>
    <string name="notUser">Don\'t Have account? sign up here</string>
    <string name="createAnAccount">Create an Account</string>
    <string name="end">dropoff</string>
    <string name="start">Start</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="username">User Name</string>
    <string name="signup">Sign Up</string>
    <string name="OrSignUpWith">Or sign up with</string>
    <string name="alreadyRegistered">Already Registered? Sign in here</string>
    <string name="title_activity_maps">Map</string>
    <string name="noteTitle">Write your note</string>
    <string name="addNote">Add</string>
    <string name="tripError">Note cannot be empty</string>
    <string name="update">Update</string>
    <string name="updateNote">Update note</string>
    <string name="editTrip">Edit trip</string>
    <string name="startTrip">Start Trip</string>
    <string name="tripNamestr">Trip Name</string>
    <string name="Fromstr">From</string>
    <string name="Tostr">To</string>
    <string name="repeatTripstr">Repeat Trip</string>
    <string name="oneDirectionstr">One Direction</string>
    <string name="roundTripstr">Round Trip</string>
    <string name="notestr">Notes</string>
    <string name="addTripstr">Add Trip</string>
    <string name="datestr">Date</string>
    <string name="timestr">Time</string>


</resources>
