<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.egh.tripplanner.fragments.SignUpFragment">


    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/password_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email_signup"
        android:layout_below="@+id/email_signup"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <EditText
        android:id="@+id/confirmPassword_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_signup"
        android:layout_below="@+id/password_signup"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/signup"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupBtn"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@+id/fbSignup"
        android:padding="5dp"
        android:text="@string/OrSignUpWith"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/fbSignup"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignEnd="@+id/signupBtn"
        android:background="@drawable/fb"
        android:padding="5dp" />

    <TextView
        android:id="@+id/goto_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/alreadyRegistered"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</RelativeLayout>
