<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.egh.tripplanner.fragments.SignInFragment">


    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailText"
        android:layout_alignStart="@+id/emailText"
        android:layout_below="@+id/emailText"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signInBtn"
        android:layout_below="@+id/signInBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="23dp"
        android:padding="5dp"
        android:text="@string/orLogin"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/fbLoginBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignEnd="@+id/signInBtn"
        android:background="@drawable/common_google_signin_btn_icon_dark"
        android:padding="10dp" />

    <TextView
        android:id="@+id/goto_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/notUser"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />


</RelativeLayout>
